tests/err04.json.err
Parse error at line 4

001: {
002: 	"a    
003: 
004: 
     ^
Unterminated ID string
